--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -255,7 +255,10 @@ footer {
   header ul {
     width:99%;
   }
-
+  
+  header li, header ul li + li + li {
+    width:33%;
+  }
 }
 
 @media print {
