--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ body {
   background-color: #000000;
   padding:50px;
   font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color:#595959;
+  color:#a6a6a6;
   font-weight:400;
 }
 
