--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ body {
   background-color: #000000;
   padding:50px;
   font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color:#a6a6a6;
+  color:#ffffff;
   font-weight:400;
 }
 
@@ -25,12 +25,12 @@ h1 {
 }
 
 h2 {
-  color:#c6c6c6;
+  color:#fff;
   font-weight: 500;
 }
 
 h3, h4, h5, h6 {
-  color:#b6b6b6;
+  color:#fff;
   font-weight: 500;
 }
 
